Added a red/gray nucleus dot in the mass indicator atom icon
Increased the size of the atom icon on the mass-indicator scale
Aligned readout windows
Made the electron orbitals more transparent
Capitalized window names
Improved font for window names
Moved the window name and button to the right, and content to the left
Improved the fonts for the Atom and Ion labels
# 0.00.05 (44820) Oct 6, 2010
10/6/10 Added indicators and readouts
# 0.00.04 (44793) Oct 6, 2010
10/6/10 Publishing to dev with changes based on first round of feedback.
# 0.00.03 (44790) Oct 6, 2010
10/6/10 Publishing to dev after incorporating first round of feedback.
10/6/10 Adjusted buckets and electron position so that electrons in the bottom row are easier to grab.
10/6/10 Added two neutrons and one electron.  This now matches the original spec.
# 0.00.02 (44765) Oct 6, 2010
10/6/10 First version with basic atom-building functionality.
# 0.00.01 (44266) Sep 21, 2010
9/21/10 Initial deployment of this sim, no actual functionality yet.
09-21-2010 Original creation of this simulation project.